--- a/Dia_16/base/templates/base/tarea_delete.html
+++ b/Dia_16/base/templates/base/tarea_delete.html
@@ -2,14 +2,19 @@
 
 {% block content %}
 
-<h1>Eliminar tarea: "{{ tarea }}"</h1>
-<a href="{% url 'tareas' %}">Volver</a>
+<div class="barra-superior">
+  <a href="{% url 'tareas' %}">&#x21A9; Volver</a>
+</div>
 
-<form action="" method="post">
-  {% csrf_token %}
-  <p>Esta acción es irreversible.</p>
-  <p>¿Está seguro de eliminar esta tarea?</p>
-  <input type="submit" value="Eliminar">
-</form>
+<div class="cuerpo-tarjeta">
+  <h1>Eliminar tarea: "{{ tarea }}"</h1>
+
+  <form action="" method="post">
+    {% csrf_token %}
+    <p style="color: red;">Esta acción es irreversible.</p>
+    <p>¿Está seguro de eliminar esta tarea?</p>
+    <input class="button" type="submit" value="Eliminar">
+  </form>
+</div>
 
 {% endblock %}
