--- a/Dia_16/base/templates/base/login.html
+++ b/Dia_16/base/templates/base/login.html
@@ -2,14 +2,18 @@
 
 {% block content %}
 
-<h1>Ingresar</h1>
+<div class="barra-superior">
+  <h1>Ingresar</h1>
+</div>
 
-<form action="" method="post">
-  {% csrf_token %}
-  {{ form.as_p }}
-  <input type="submit" value="Ingresar">
-</form>
-
-<p>¿No tienes una cuenta? <a href="{% url 'registro' %}">¡Registrarse!</a></p>
+<div class="cuerpo-tarjeta">
+  <form action="" method="post">
+    {% csrf_token %}
+    {{ form.as_p }}
+    <input class="button" type="submit" value="Ingresar">
+  </form>
+  
+  <p>¿No tienes una cuenta? <a href="{% url 'registro' %}">¡Registrarse!</a></p>  
+</div>
 
 {% endblock %}
