--- a/Dia_16/base/templates/base/registro.html
+++ b/Dia_16/base/templates/base/registro.html
@@ -2,14 +2,18 @@
 
 {% block content %}
 
-<h1>Registrarse</h1>
+<div class="barra-superior">
+  <h1>Registrarse</h1>
+</div>
 
-<form action="" method="post">
-  {% csrf_token %}
-  {{ form.as_p }}
-  <input type="submit" value="Registrarse">
-</form>
+<div class="cuerpo-tarjeta">
+  <form action="" method="post" style="padding: 20px">
+    {% csrf_token %}
+    {{ form.as_p }}
+    <input class="button" type="submit" value="Registrarse">
+  </form>
 
-<p>¿Ya tienes una cuenta? <a href="{% url 'login' %}">¡Ingresar!</a></p>
+  <p>¿Ya tienes una cuenta? <a href="{% url 'login' %}">¡Ingresar!</a></p>
+</div>
 
 {% endblock %}
