--- a/Dia_16/base/templates/base/tarea_list.html
+++ b/Dia_16/base/templates/base/tarea_list.html
@@ -2,52 +2,63 @@
 
 {% block content %}
 
-{% if request.user.is_authenticated %}
-  <p>{{ request.user }}</p>
-  {% comment %}
-  <a href="{% url 'logout' %}">Salir</a>
+<div class="barra-superior">
+  <div>
+    <h2>Hola, {{ request.user|title }}</h2>
+    <h3>Tienes {{ count }} tarea{{ count|pluralize }} incompleta{{ count|pluralize }}.</h3>
+  </div>
 
-  Obtengo error, debido a que en Django 5 esta forma está deprecada.
-  https://forum.djangoproject.com/t/deprecation-of-get-method-for-logoutview/25533/3
+  {% if request.user.is_authenticated %}
+    {% comment %}
+    <a href="{% url 'logout' %}">Salir</a>
 
-  Para que funcione, ahora debe hacerse de la siguiente forma para 
-  aplicar el método POST requerido.
-  {% endcomment %}
-  <form action="{% url 'logout' %}" method="post">
-    {% csrf_token %}
-    <input type="submit" value="Salir">
+    Obtengo error, debido a que en Django 5 esta forma está deprecada.
+    https://forum.djangoproject.com/t/deprecation-of-get-method-for-logoutview/25533/3
+
+    Para que funcione, ahora debe hacerse de la siguiente forma para 
+    aplicar el método POST requerido.
+    {% endcomment %}
+    <form action="{% url 'logout' %}" method="post" style="min-width: unset;">
+      {% csrf_token %}
+      <input class="btn-salir" type="submit" value="Salir">
+    </form>
+  {% else %}
+    <a href="{% url 'login' %}">Ingresar</a>
+  {% endif %}
+</div>
+
+<div id="envoltorio-agregar-buscar">
+  <form action="" method="get" style="display: flex;">
+    <input type="text" name="buscador" id="buscador" value="{{ valor_buscado }}" placeholder="Busque una tarea aquí">
+    <input class="button" style="margin-left: 10px;" type="submit" value="Buscar">
   </form>
-{% else %}
-  <a href="{% url 'login' %}">Ingresar</a>
-{% endif %}
+  <a id="enlace-agregar" href="{% url 'crear_tarea' %}" title="Agregar nueva tarea">&#x271A;</a>
+</div>
 
-<hr>
-
-<h1>Lista de pendientes</h1>
-
-<a href="{% url 'crear_tarea' %}">Crear nueva tarea</a>
-
-<form action="" method="get">
-  <input type="text" name="buscador" id="buscador" value="{{ valor_buscado }}">
-  <input type="submit" value="Buscar">
-</form>
-
-<table>
-  <tr>
-    <th>Elementos</th>
-    <th></th>
-    <th></th>
-  </tr>
-  
+<div class="envoltorio-items-tarea">
   {% for tarea in tareas %}
-    <tr>
-      <td>{{ tarea.titulo }}</td>
-      <td><a href="{% url 'editar_tarea' tarea.id %}">Editar</a></td>
-      <td><a href="{% url 'eliminar_tarea' tarea.id %}">Eliminar</a></td>
-    </tr>
-    {% empty %}
+    <div class="envoltorio-tarea">
+      {% if tarea.completo %}
+        <div class="titulo-tarea">
+          <div class="icono-tarea-completa"></div>
+            <i><s><a href="{% url 'editar_tarea' tarea.id %}">{{ tarea }}</a></s></i>
+        </div>
+        <a class="enlace-eliminar" href="{% url 'eliminar_tarea' tarea.id %}" title="Eliminar tarea">
+          &#x2A2F;
+        </a>
+      {% else %}
+        <div class="titulo-tarea">
+          <div class="icono-tarea-incompleta"></div>
+            <a href="{% url 'editar_tarea' tarea.id %}">{{ tarea }}</a>
+        </div>
+        <a class="enlace-eliminar" href="{% url 'eliminar_tarea' tarea.id %}" title="Eliminar tarea">
+          &#x2A2F;
+        </a>
+      {% endif %}
+    </div>
+  {% empty %}
     <h3>No hay elementos en esta lista</h3>
   {% endfor %}
-</table>
+</div>
 
 {% endblock %}
